syntax = "proto3";

package geolocation;

// Simple timezone information
message TimeZoneInfo {
  string name = 1;
}

// Simple IP geolocation response
message IpGeoResponse {
  optional double latitude = 1;
  optional double longitude = 2;
  string city = 3;
  string country_name = 4;
  TimeZoneInfo time_zone = 5;
  string languages = 6;
}

// Detailed location information
message LocationInfo {
  optional string continent_code = 1;
  optional string continent_name = 2;
  optional string country_code2 = 3;
  optional string country_code3 = 4;
  optional string country_name = 5;
  optional string country_name_official = 6;
  optional string country_capital = 7;
  optional string state_prov = 8;
  optional string state_code = 9;
  optional string district = 10;
  optional string city = 11;
  optional string zipcode = 12;
  optional string latitude = 13;
  optional string longitude = 14;
  optional bool is_eu = 15;
  optional string country_flag = 16;
  optional string geoname_id = 17;
  optional string country_emoji = 18;
}

// Country metadata
message CountryMetadataInfo {
  optional string calling_code = 1;
  optional string tld = 2;
  repeated string languages = 3;
}

// Currency information
message CurrencyInfo {
  optional string code = 1;
  optional string name = 2;
  optional string symbol = 3;
}

// Detailed timezone information
message TimeZoneInfoFull {
  optional string name = 1;
  optional int32 offset = 2;
  optional int32 offset_with_dst = 3;
  optional string current_time = 4;
  optional double current_time_unix = 5;
  optional bool is_dst = 6;
  optional int32 dst_savings = 7;
  optional bool dst_exists = 8;
}

// Full IP geolocation response
message IpGeoResponseFull {
  optional string ip = 1;
  optional LocationInfo location = 2;
  optional CountryMetadataInfo country_metadata = 3;
  optional CurrencyInfo currency = 4;
  optional TimeZoneInfoFull time_zone = 5;
}

// Simple timezone response
message TimezoneResponse {
  string timezone = 1;
}

// Full timezone response
message TimezoneResponseFull {
  string timezone = 1;
  optional int32 offset = 2;
  optional int32 offset_with_dst = 3;
  optional string current_time = 4;
  optional double current_time_unix = 5;
  optional bool is_dst = 6;
  optional bool dst_exists = 7;
}

// API error response
message ApiError {
  string error = 1;
  string code = 2;
}
